[package]
name = "Orly"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6", features = ["derive"] }
gpui = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = ["font-kit"] }
gpui-component = { git = "https://github.com/longbridge/gpui-component", features = ["inspector", "tree-sitter-languages"] }
gpui-component-assets = {  git = "https://github.com/longbridge/gpui-component" } 
markdown = { version = "1.0.0", features = ["serde"] }
